navbar-fix-z-indexos

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ nav {
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
     width: 100vw;
 }
 
@@ -98,6 +98,7 @@ nav {
     margin: 0;
     padding: 0;
     text-align: center;
+    z-index: 2;
 }
 
 .hamburger-item {
@@ -195,8 +196,9 @@ nav {
         transform-origin: top;
         font-size: 20px;
         position: fixed;
-        top: 79px;
+        top: 84px;
         width: 100%;
+        z-index: 2;
     }
 
     .dropdown-link {
